SET(THREADS_PREFER_PTHREAD_FLAG_ON)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image >= 2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf >= 2.0.0)

FIND_PACKAGE(Threads REQUIRED)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR} ${SDL2IMAGE_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR})

ADD_EXECUTABLE(towerdefense_viewer
        main_viewer.cpp
        MapDrawer.h MapDrawer.cpp
        aux/Cleanup.h)

TARGET_LINK_LIBRARIES(towerdefense_viewer ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES} Threads::Threads)
ADD_DEPENDENCIES(towerdefense_viewer cereal)
SET_TARGET_PROPERTIES(towerdefense_viewer PROPERTIES COMPILE_FLAGS "-std=c++14 -g -O3")
